--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,11 @@
-=== 0.0.1 2011-08-25
+=== 0.1.1 2011-09-09
+
+* 1 major enhancement:
+  * Added check for the cache object having been set up.
+- Minor enhancements
+  - Much documentation updating.
+
+=== 0.1.0a1 2011-09-08
 
 * 1 major enhancement:
   * Initial release
