--- a/TODO
+++ b/TODO
@@ -15,13 +15,6 @@ o Should private variables be allowed to have user-set names?
   [For now, no.]
 o Need to test true sharing, in which cell names are *not* necessarily
   unique to each test, and may be left around between them
-o Making the wrapper transparent is turning out to be a bugger.  Using
-  the Delegator mechanism breaks #kind_of?, and using __send__ to
-  intercept methods isn't working (at least in Ruby 1.8.7).
-  - Idea: Extract all the methods from the object using obj#method,
-    and store them in a hash.  Override the methods with code that
-    invokes the saved method and does the check for changed content?
-    That way it still retains its inheritance..
 o Annotating the return value with singleton methods that update the
   cache works, but unexpectedly has some issues:
 
@@ -44,3 +37,5 @@ o Annotating the return value with singleton methods that update the
   How to deal with this?  Add some sort of counter such that direct
   frobs of the ivar invalidate (delete singleton methods) any
   outstanding references?
+
+o Pass more information to the accessor naming block.
